# qwixx-analyzer

./: .gitignore  CITATION.cff  CMakeLists.txt  Checkers  Doxyfile  Makefile  README.md  checkers.py  makefile  mcts.py  policy.py  test_checkers.py
data/: all_four.txt  computational_vs_computational.txt  computational_vs_random.txt  greedy1_vs_computational.txt  greedy1_vs_greedy1.txt  greedy1_vs_greedy2improved.txt  greedy1_vs_greedy2improved_vs_computational.txt  greedy1_vs_greedy2improved_vs_rush.txt  greedy1_vs_random.txt  greedy1_vs_rush.txt  greedy1_vs_rush_vs_computational.txt  greedy2improved_vs_computational.txt  greedy2improved_vs_greedy2improved.txt  greedy2improved_vs_random.txt  greedy2improved_vs_rush.txt  greedy2improved_vs_rush_vs_computational  greedy2improved_vs_rush_vs_computational.txt  input.txt  rush_vs_computational.txt  rush_vs_random.txt  rush_vs_rush.txt
include/: game.hpp
src/: CMakeLists.txt  agent.cpp  agent.hpp  game.cpp  game.hpp  globals.hpp  main.cpp  qwixx.cpp  rng.cpp  rng.hpp
tests/: CMakeLists.txt  game_test.cpp  game_test.hpp  test.cpp
